# NaioPythonBridge

./: .gitignore  CMakeLists.txt  README.md
inc/: robot.hpp  robot_binding.hpp
src/: main.cpp  robot.cpp
